# lr6

./: CMakeLists (19).txt  CMakeLists (20).txt  CMakeLists.txt  README (4).md  README.md  travis (1).yml  travis.yml
.github/workflows/: cmake-single-platform.yml
PolishLib/: Polish.cpp  Polish.h
PolishTest/: CMakeLists.txt  PolishTest.cpp  Test_main (4).cpp  Test_main.cpp
StackLib/: CMakeLists.txt  Stack (1).h  Stack.h
